<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Uceluj w dziesiątkę</string>
    <string name="friendsGame">Graj ze znajomymi</string>
    <string name="networkGame">Graj w sieci</string>
    <string name="aboutAuthor">o twórcy</string>
    <string name="howToPlay">jak grać</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut ipsum sodales, vehicula turpis in, vestibulum mi. Mauris diam ex, pharetra bibendum odio sed, pellentesque tempus orci. Ut pharetra lorem a malesuada congue. Proin odio lacus, pharetra vitae pulvinar at, consectetur malesuada sapien. Curabitur a ipsum nec erat varius facilisis eu quis augue. Nulla quis justo et elit finibus consectetur a eget ipsum. Suspendisse tincidunt sem eros, fermentum congue nisl egestas non. Morbi facilisis lectus orci, ut tempor sem maximus aliquet. </string>

    <string name="backButton">wróć</string>
    <string name="nextButton">dalej</string>
    <string name="scanButton">skanuj</string>
    <string name="createRoom">stwórz pokój</string>
    <string name="joinToRoom">dołącz do pokoju</string>

    <string name="putRoomName">Wpisz nazwę twojego pokoju:</string>
    <string name="exampleRoomName">room112</string>
    <string name="refreshButton">odśwież</string>
    <string name="maxPlayersInfo">Maksymalna ilość graczy: </string>
    <string name="connectedPlayersInfo">połączyło się: </string>
    <string name="chooseAvailableRoomBaner">Wybierz dostępny pokój: </string>
    <string name="discoverableNow">Widoczny</string>
    <string name="connectStatusBar">"Status połączenia: "</string>
    <string name="keepConnections">połączony</string>
    <string name="problemWithDiscoverability">Wystąpił problem z widocznością urządzenia</string>
    <string name="refreshAgain">odśwież ponownie</string>
    <string name="letsPlay">graj</string>
    <string name="beDiscoverable">bądź widoczny</string>
    <string name="logo">Logo aplikacji</string>
    <string name="done">gotowe</string>
    <string name="questionCard">Karta pytania żebyś tutaj coś wpasowała …</string>
    <string name="welcomeInRoom" tools:ignore="TypographyEllipsis">witaj w pokoju! oczekiwanie na reszte graczy... pamiętaj aby zatwierdzić swoją obecność.</string>
    <string name="arrow">strzała</string>
    <string name="gameStatus">status gry:</string>
    <string name="randomQuestion">wylosowane pytanie</string>
    <string name="conductor">prowadzacy</string>
    <string name="round">runda</string>
    <string name="dartboard">tarcza</string>
    <string name="points">punkty:</string>
    <string name="waitingForPlayers">oczekiwanie na graczy</string>
    <string name="connected">połączono</string>
    <string name="answerCard">odpowiedź na pytanie</string>
    <string name="confirmAttendance">potwierdź obecność</string>
    <string name="askPlayersForApproval">poproś graczy o zatwierdzenie</string>
    <string name="startGame">zacznij grę</string>
    <string name="chooseAnswer">wybierz</string>
    <string name="waitForAnswers">poczekaj na odpowiedzi</string>
    <string name="waitForQuestionsAndAnswers">czekaj na zestaw</string>
    <string name="putPlayersLimit">wpisz ilość graczy:</string>
</resources>