<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ServerWaitingForPlayers">

    <Button
        android:id="@+id/nextButton2"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shadow"
        android:fontFamily="@font/major_regular"
        android:text="@string/letsPlay"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refreshListButton"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="297dp" />

    <TextView
        android:id="@+id/showRoomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/major_regular"
        android:text="@string/exampleRoomName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/maxPlayersInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/maxPlayersInfo"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showRoomName" />

    <TextView
        android:id="@+id/connectedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/connectedPlayersInfo"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPlayersInfo" />

    <ListView
        android:id="@+id/pairedDevicesList"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/major_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedInfo">

    </ListView>

    <Button
        android:id="@+id/discoverableButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="84dp"
        android:background="@drawable/shadow"
        android:fontFamily="@font/major_regular"
        android:text="@string/beDiscoverable"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/refreshListButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backButton" />

    <Button
        android:id="@+id/refreshListButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="84dp"
        android:background="@drawable/shadow"
        android:fontFamily="@font/major_regular"
        android:text="@string/refreshButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/discoverableButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/shadow"
        android:fontFamily="@font/major_regular"
        android:text="@string/backButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/discoverableButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>